--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@practical-react-hooks/use-fullscreen": "^1.0.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "firebase": "^9.10.0",
+    "framer-motion": "^7.4.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-full-screen": "^1.1.1",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
